--- a/index.html
+++ b/index.html
@@ -12,70 +12,75 @@
 
 </head>
 
-<body style="background-color: #a2bbcf;">
-
-    <h1 class="text-center mt-4">CALCULATOR</h1>
+<body>
+    <div class="snow"></div>
+    <!-- <h4 class="text-center fw-bold text-light mt-4">CALCULATOR</h4> -->
 
     <div class="container-fluid mt-3 justify-content-center align-self-center d-flex">
 
         <div class="fo align-self-center justify-content-center rounded-4 p-4">
 
             <!-- Digital Clock  -->
-            <div class="clock postion-apsolute d-flex text-light fw-bold mt-0 mb-">
-                <span id="hours">00</span>:<span id="mins">00</span>:<span id="seconds">00</span>
-                <span id="ampm">AM</span>
-            </div>
+            <div class="d-flex justify-content-between align-items-center custom-header">
+                <div class="clock text-light fw-bold">
+                  <span id="hours">00</span>:<span id="mins">00</span>:<span id="seconds">00</span>
+                  <span id="ampm">AM</span>
+                </div>
+                
+                <div class="frozen-title text-end">
+                  <p class="mb-0">Scientific Calculator</p>
+                </div>
+              </div>
 
             <div class="mt-2">
                 <input class="form border-0 w-100 text-end fs-1" type="text" placeholder="0" id="displayInput">
 
                 <div class="btnstyle mt-4 ps-2">
                     <div>
-                        <button onclick="clearDisplay()" class="bnc btn btn-light btn-lg fw-bold fs-3">CL</button>
-                        <button onclick="calculateFactorial()" class="bnc btn btn-light btn-lg fw-bold fs-3">x!</button>
-                        <button value="(" onclick="display('(')" class="bnc btn btn-light btn-lg fw-bold fs-3">(</button>
-                        <button value=")" onclick="display(')')" class="bnc btn btn-light btn-lg fw-bold fs-3">)</button>
-                        <button onclick="percent('%')" class="bnc btn btn-light btn-lg fw-bold fs-3">%</button>
-                        <button onclick="del()" class="bnc btn btn-light btn-lg fw-bold fs-3">
+                        <button onclick="clearDisplay()" class="bnc btn border-dark btn-lg text-light fw-bold fs-4">CL</button>
+                        <button onclick="calculateFactorial()" class="bnc btn border-dark btn-lg text-light fw-bold fs-4">x!</button>
+                        <button value="(" onclick="display('(')" class="bnc btn border-dark btn-lg text-light fw-bold fs-4">(</button>
+                        <button value=")" onclick="display(')')" class="bnc btn border-dark btn-lg text-light fw-bold fs-4">)</button>
+                        <button onclick="percent('%')" class="bnc btn border-dark btn-lg text-light fw-bold fs-4">%</button>
+                        <button onclick="del()" class="bnc btn border-dark btn-lg text-light fw-bold fs-4">
                             <i class='bx bx-message-alt-x bx-rotate-90 fw-bold'></i>
                         </button>
                     </div>
 
                     <div>
-                        <button onclick="sin()" class="bnc btn btn-light btn-lg fw-bold fs-3">sin</button>
-                        <button onclick="pi()" class="bnc btn btn-light btn-lg fw-bold fs-3">π</button>
-                        <button onclick="display('7')" class="bne btn btn-lg btn-light fw-bold fs-3">7</button>
-                        <button onclick="display('8')" class="bnd btn btn-lg btn-light fw-bold fs-3">8</button>
-                        <button onclick="display('9')" class="bn btn btn-lg btn-light fw-bold fs-3">9</button>
-                        <button onclick="display('/')" class="bnc btn btn-lg btn-light fw-bold fs-3">/</button>
+                        <button onclick="sin()" class="bnc btn border-dark btn-lg text-light fw-bold fs-4">sin</button>
+                        <button onclick="pi()" class="bnc btn border-dark btn-lg text-light fw-bold fs-4">π</button>
+                        <button onclick="display('7')" class="bne btn btn-lg border-dark text-light fw-bold fs-4">7</button>
+                        <button onclick="display('8')" class="bnd btn btn-lg border-dark text-light fw-bold fs-4">8</button>
+                        <button onclick="display('9')" class="bn btn btn-lg border-dark text-light fw-bold fs-4">9</button>
+                        <button onclick="display('/')" class="bnc btn btn-lg border-dark text-light fw-bold fs-4">/</button>
                     </div>
 
                     <div>
-                        <button onclick="cos()" class="bnd btn btn-lg btn-light fw-bold fs-3">cos</button>
-                        <button onclick="log()" class="bn btn btn-lg btn-light fw-bold fs-3">Log</button>
-                        <button onclick="display('4')" class="bn btn btn-lg btn-light fw-bold fs-3">4</button>
-                        <button onclick="display('5')" class="bn btn btn-lg btn-light fw-bold fs-3">5</button>
-                        <button onclick="display('6')" class="bn btn btn-lg btn-light fw-bold fs-3">6</button>
-                        <button onclick="display('*')" class="bnc btn btn-lg btn-light fw-bold fs-3">*</button>
+                        <button onclick="cos()" class="bnd btn btn-lg border-dark text-light fw-bold fs-4">cos</button>
+                        <button onclick="log()" class="bn btn btn-lg border-dark text-light fw-bold fs-4">Log</button>
+                        <button onclick="display('4')" class="bn btn btn-lg border-dark text-light fw-bold fs-4">4</button>
+                        <button onclick="display('5')" class="bn btn btn-lg border-dark text-light fw-bold fs-4">5</button>
+                        <button onclick="display('6')" class="bn btn btn-lg border-dark text-light fw-bold fs-4">6</button>
+                        <button onclick="display('*')" class="bnc btn btn-lg border-dark text-light fw-bold fs-4">*</button>
                     </div>
 
                     <div>
-                        <button onclick="tan()" class="bn btn btn-lg btn-light fw-bold fs-3">tan</button>
-                        <button onclick="sqrt()" class="bn btn btn-lg btn-light fw-bold fs-3">√</button>
-                        <button onclick="display('1')" class="bn btn btn-lg btn-light fw-bold fs-3">1</button>
-                        <button onclick="display('2')" class="bn btn btn-lg btn-light fw-bold fs-3">2</button>
-                        <button onclick="display('3')" class="bn btn btn-lg btn-light fw-bold fs-3">3</button>
-                        <button onclick="display('-')" class="bnc btn btn-lg btn-light fw-bold fs-3">-</button>
+                        <button onclick="tan()" class="bn btn btn-lg border-dark text-light fw-bold fs-4">tan</button>
+                        <button onclick="sqrt()" class="bn btn btn-lg border-dark text-light fw-bold fs-4">√</button>
+                        <button onclick="display('1')" class="bn btn btn-lg border-dark text-light fw-bold fs-4">1</button>
+                        <button onclick="display('2')" class="bn btn btn-lg border-dark text-light fw-bold fs-4">2</button>
+                        <button onclick="display('3')" class="bn btn btn-lg border-dark text-light fw-bold fs-4">3</button>
+                        <button onclick="display('-')" class="bnc btn btn-lg border-dark text-light fw-bold fs-4">-</button>
                     </div>
 
-
                     <div>
-                        <button onclick="e()" class="bn btn btn-lg btn-light fw-bold fs-3">e</button>
-                        <button onclick="pow()" class="bn btn btn-lg btn-light fw-bold fs-3">x^y</button>
-                        <button onclick="display('0')" class="bn btn btn-lg btn-light fw-bold fs-3">0</button>
-                        <button onclick="display('.')" class="bn btn btn-lg btn-light fw-bold fs-3">.</button>
-                        <button onclick="calculate()" class="bnb btn btn-lg btn-light fw-bold fs-3">=</button>
-                        <button onclick="display('+')" class="bnc btn btn-lg btn-light fw-bold fs-3">+</button>
+                        <button onclick="e()" class="bn btn btn-lg border-dark text-light fw-bold fs-4">e</button>
+                        <button onclick="pow()" class="bn btn btn-lg border-dark text-light fw-bold fs-4">x^y</button>
+                        <button onclick="display('0')" class="bn btn btn-lg border-dark text-light fw-bold fs-4">0</button>
+                        <button onclick="display('.')" class="bn btn btn-lg border-dark text-light fw-bold fs-4">.</button>
+                        <button onclick="calculate()" class="bnb btn btn-lg border-dark text-light fw-bold fs-4">=</button>
+                        <button onclick="display('+')" class="bnc btn btn-lg border-dark text-light fw-bold fs-4">+</button>
                     </div>
 
 
